# chatlab

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOC_PLAN.md  DOC_SUMMARY.md  LICENSE  PLAN.md  README.md  RELEASING.md  Untitled-1.ipynb  Untitled1.ipynb  generate_docs.py  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  pages.yml  preview.yml  release.yml  test.yml
chatlab/: __init__.py  _version.py  builtins.py  chat.py  conversation.py  decorators.py  display.py  errors.py  extractor.py  markdown.py  messaging.py  models.py  prompts.py  registry.py  tool_call.py
chatlab/builtins/: __init__.py  _mediatypes.py  colors.py  files.py  noteable.py  python.py  shell.py
chatlab/components/: function_details.py
chatlab/repr_llm/: base.py  pandas.py
chatlab/shells/: python.py
chatlab/tools/: __init__.py  _mediatypes.py  colors.py  files.py  python.py  shell.py
chatlab/views/: __init__.py  abstracts.py  argument_buffer.py  assistant.py  assistant_function_call.py  markdown.py  tools.py
docs/: api.md  installation.md  usage.md
murkrow/: __init__.py  builtins.py  cli.py  conversation.py  display.py  markdown.py  messaging.py  murkrow.py  registry.py
notebooks/: basics.ipynb  color-picker.ipynb  cooking.ipynb  function-registry.ipynb  introduce-time.ipynb  knowledge-graph.ipynb  noteable.ipynb  open-model-functions.ipynb  openai-weather.ipynb  parallel-function-calling.ipynb  python-hallucination.ipynb  streaming-updates.ipynb  the-data-science-helper.ipynb
scripts/: add-poetry-kernel.sh
site/: docusaurus.config.js  package-lock.json
site/blog/: 2023-07-01-welcome.md
site/docs/: interpreter.mdx  intro.mdx  setting-api-keys.md
tests/: ModelModelModels.ipynb  __init__.py  ordering.ipynb  test_builtins.py  test_chatlab.py  test_decorators.py  test_messaging.py  test_murkrow.py  test_registry.py  test_views.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: authors.yml
website/docs/: interpreter.mdx  intro.mdx  setting-api-keys.md
website/docs/api/: chat.mdx  chatlab_doc.json  function-registry.mdx
website/docs/examples/: color-picker.mdx  knowledge-graph.mdx
website/src/components/: ColorPalette.tsx  Documentation.tsx
website/src/components/ChatFunctionCall/: index.tsx  styles.module.css
website/src/components/HomepageFeatures/: index.tsx
website/src/components/cell/: blocks.tsx  execution-count.tsx  index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.tsx
website/src/theme/CodeBlock/: index.js
website/src/theme/CodeBlock/Container/: index.js  styles.module.css
website/static/: CNAME
