[tool]
[tool.poetry]
name = "chatlab"
version = "1.0.0-alpha"
homepage = "https://github.com/rgbkrk/chatlab"
description = "Chat Plugin Experiments, Simplified. Create agents and give them superpowers in your notebooks."
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]
readme = "README.md"
license =  "BSD-3-Clause"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Framework :: Jupyter',
    'Framework :: Jupyter :: JupyterLab',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Communications :: Chat',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Artificial Life',
    'Topic :: Scientific/Engineering :: Human Machine Interfaces'
]
packages = [
    { include = "chatlab" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
ipython = ">=7.0.0,<9.0.0"
openai = "^0.27.4"
pydantic = ">=1.9.0,<2.0.0"
vdom = "^1.0.0"
deprecation = "^2.1.0"
repr-llm = "^0.2.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.11"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.2.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
virtualenv = "^20.21.0"
pip = "^23.0.1"
twine = "^4.0.2"
pre-commit = "^3.2.2"
toml = "^0.10.2"
bump2version = "^1.0.1"
jinja2 = "^3.1.2"
ipykernel = ">=6.0.0,<8.0.0"
types-toml = "^0.10.8.6"
pandas = "^2.0.2"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
